hello-world-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
    - name: hello-world
      image: k8s.gcr.io/echoserver:1.4
      ports:
        - containerPort: 8080
