pending.yaml
apiVersion: v1
kind: Pod
metadata:
  name: trop-gros
  labels:
    app.kubernetes.io/name: experience
spec:
  containers:
    - name: pause
      image: busybox:1.37
      command: ["sh", "-c", "sleep 3600"]
      resources:
        requests:
          cpu: "100"
          memory: 32Mi
        limits:
          cpu: "100"
          memory: 64Mi
